--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
         </div>
 
         <div class="video">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/okDDgoDooApwM?si=vXxtnGmbvWJfUerS" allowfullscreen></iframe>
+            <!-- Use privacy-enhanced embed (no-cookie) which can avoid some blocking/privacy issues -->
+            <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/okDDgoDooApwM" title="Rango trailer" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         
         <div class="learn-more">
