--- a/index.html
+++ b/index.html
@@ -50,8 +50,9 @@
         </div>
 
         <div class="video">
-            <!-- Use privacy-enhanced embed (no-cookie) which can avoid some blocking/privacy issues -->
-            <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/okDDgoDooApwM" title="Rango trailer" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/DDgoDooApwM?si=ED3I7J0tBzvT4XAu"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
         
         <div class="learn-more">
