Save changes to index.html

--- a/index.html
+++ b/index.html
@@ -1,104 +1,135 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <title>Rango</title>
-</head>
-<body>
+  </head>
+  <body>
+    <div class="movie">
+      <h1>Rango</h1>
+    </div>
 
-        <div class="movie">
-        <h1>Rango</h1>
-        </div>
+    <div class="header" id="header">
+      <h2><strong>Director:</strong> Gore Verbinski</h2>
+      <h3><strong>Genre:</strong> Contemporary Western</h3>
+      <h4><strong>Released:</strong> 2011</h4>
+      <h5><strong>Awards:</strong> Academy Award for Best Animated Feature</h5>
+      <h6>
+        <strong>Fun Facts:</strong> "Rango" features a unique recording process
+        where actors performed together on set instead of in isolation,
+        enhancing their performances.
+      </h6>
+    </div>
 
-        <div class="header" id="header">
-            <h2><strong>Director:</strong> Gore Verbinski</h2>
-            <h3><strong>Genre:</strong> Contemporary Western</h3>
-            <h4><strong>Released:</strong> 2011</h4>
-            <h5><strong>Awards:</strong> Academy Award for Best Animated Feature</h5>
-            <h6><strong>Fun Facts:</strong> "Rango" features a unique recording process where actors performed together on set instead of in isolation, enhancing their performances.</h6>
-        </div>
+    <!-- This section contains the introduction paragraph -->
+    <div class="intro" id="intro">
+      <p>
+        <em>"Rango"</em> follows the adventures of a chameleon who accidentally
+        ends up in the lawless town of Dirt. Assuming the role of a sheriff,
+        Rango must navigate the challenges of the Wild West,
+        <strong>confront his own identity</strong>, and help the townsfolk save
+        their community from a looming water crisis.
+      </p>
+    </div>
 
-        <!-- This section contains the introduction paragraph -->
-        <div class="intro" id="intro">
-            <p><em>"Rango"</em> follows the adventures of a chameleon who accidentally ends up in the lawless town of Dirt. Assuming the role of a sheriff, Rango must navigate the challenges of the Wild West, <strong>confront his own identity</strong>, and help the townsfolk save their community from a looming water crisis.</p>
-        </div>
+    <!-- Movie poster image with descriptive alt text -->
+    <div class="image">
+      <img
+        src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.scannain.com%2Fmedia%2Frango-quad.jpg&f=1&ipt=d6e77d83861a330ae0cc8ded8b04c8524c3b05f569b674e9815f5eda133c3220&ipo=images"
+        alt="Animated chameleon Rango wearing a cowboy hat and vest stands confidently in a desert town with dusty buildings and bright blue sky"
+        title="Rango Movie Poster"
+        width="400"
+        height="250"
+      />
+    </div>
 
-        <!-- Movie poster image with descriptive alt text -->
-        <div class="image">
-            <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.scannain.com%2Fmedia%2Frango-quad.jpg&f=1&ipt=d6e77d83861a330ae0cc8ded8b04c8524c3b05f569b674e9815f5eda133c3220&ipo=images" 
-                 alt="Animated chameleon Rango wearing a cowboy hat and vest stands confidently in a desert town with dusty buildings and bright blue sky" 
-                 title="Rango Movie Poster"
-                 width="400" 
-                 height="250">
-        </div>
+    <!-- List of main characters and key scenes from the movie -->
+    <div class="characters & scenes list">
+      <h3><strong>Main Characters:</strong></h3>
+      <ul>
+        <li>Rango</li>
+        <li>Beans</li>
+        <li>Mayor</li>
+        <li>Doc</li>
+      </ul>
 
-        <!-- List of main characters and key scenes from the movie -->
-        <div class="characters & scenes list">
-            <h3><strong>Main Characters:</strong></h3>
-            <ul>
-                <li>Rango</li>
-                <li>Beans</li>
-                <li>Mayor</li>
-                <li>Doc</li>
-            </ul>
+      <h3><strong>Notable Scenes:</strong></h3>
+      <ol>
+        <li>
+          Rango's arrival in Dirt and his first encounter with the townsfolk.
+        </li>
+        <li>The water crisis revelation and Rango's plan to save the town.</li>
+        <li>
+          The showdown between Rango and the villains controlling the water
+          supply.
+        </li>
+      </ol>
+    </div>
 
-            <h3><strong>Notable Scenes:</strong></h3>
-            <ol>
-                <li>Rango's arrival in Dirt and his first encounter with the townsfolk.</li>
-                <li>The water crisis revelation and Rango's plan to save the town.</li>
-                <li>The showdown between Rango and the villains controlling the water supply.</li>
-            </ol>
-        </div>
+    <div class="video">
+      <iframe
+        width="560"
+        height="315"
+        src="https://www.youtube.com/embed/DDgoDooApwM?si=ED3I7J0tBzvT4XAu"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin"
+        allowfullscreen
+      ></iframe>
+    </div>
 
-        <div class="video">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/DDgoDooApwM?si=ED3I7J0tBzvT4XAu"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        </div>
-        
-        <div class="learn-more">
-            <h3><strong>Learn More:</strong></h3>
-            <p>Reviews: <a href="https://www.imdb.com/title/tt1192628/" target="_blank">IMDb</a></p>
-            <p>Learn more: <a href="https://en.wikipedia.org/wiki/Rango_(film)" target="_blank">Wikipedia</a></p>
-            <p>Jump to <a href="#header">introduction</a></p>
-        </div>
+    <div class="learn-more">
+      <h3><strong>Learn More:</strong></h3>
+      <p>
+        Reviews:
+        <a href="https://www.imdb.com/title/tt1192628/" target="_blank">IMDb</a>
+      </p>
+      <p>
+        Learn more:
+        <a href="https://en.wikipedia.org/wiki/Rango_(film)" target="_blank"
+          >Wikipedia</a
+        >
+      </p>
+      <p>Jump to <a href="#header">introduction</a></p>
+    </div>
 
-        <div class="table">
-            <table border="1">
-                <thead>
-                    <tr>
-                        <th scope="col">Character</th>
-                        <th scope="col">Actor</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <th scope="row">Rango</th>
-                        <td>Johnny Depp</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">Beans</th>
-                        <td>Isla Fisher</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">Mayor</th>
-                        <td>Ned Beatty</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">Rattlesnake Jake</th>
-                        <td>Bill Nighy</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">Priscilla</th>
-                        <td>Abigail Breslin</td>
-                    </tr>
-                    <tr>
-                        <td colspan="2">+ Other Supporting Cast</td>
-                    </tr>
-                    <tr>
-                        <td colspan="2">Total Cast Listed: 5</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-</body>
+    <div class="table">
+      <table border="1">
+        <thead>
+          <tr>
+            <th scope="col">Character</th>
+            <th scope="col">Actor</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">Rango</th>
+            <td>Johnny Depp</td>
+          </tr>
+          <tr>
+            <th scope="row">Beans</th>
+            <td>Isla Fisher</td>
+          </tr>
+          <tr>
+            <th scope="row">Mayor</th>
+            <td>Ned Beatty</td>
+          </tr>
+          <tr>
+            <th scope="row">Rattlesnake Jake</th>
+            <td>Bill Nighy</td>
+          </tr>
+          <tr>
+            <th scope="row">Priscilla</th>
+            <td>Abigail Breslin</td>
+          </tr>
+          <tr>
+            <td colspan="2">+ Other Supporting Cast</td>
+          </tr>
+          <tr>
+            <td colspan="2">Total Cast Listed: 5</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </body>
 </html>
